the change in letex
Here shows some changes in the latex profile.

--- a/template.tex
+++ b/template.tex
@@ -26,7 +26,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 	\begin{frontmatter}
-		\title{Scaling Analysis of a Moving Guassion Heat Source in Steady State in a Semi-Infinite Solid. This is my first try}
+		\title{Scaling Analysis of a Moving Guassion Heat Source in Steady State in a Semi-Infinite Solid. Can't it show the change in file?}
 		
 		\author[UoA]{X.~Y.~Jimmy\corref{cor1}}
 		\ead{jimmy@ualberta.ca}
