--- a/template.tex
+++ b/template.tex
@@ -26,7 +26,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 	\begin{frontmatter}
-		\title{Scaling Analysis of a Moving Guassion Heat Source in Steady State in a Semi-Infinite Solid. Can't it show the change in file?}
+		\title{Scaling Analysis of a Moving Guassion Heat Source in Steady State in a Semi-Infinite Solid. Now we can change files in Letex sytle on github.}
 		
 		\author[UoA]{X.~Y.~Jimmy\corref{cor1}}
 		\ead{jimmy@ualberta.ca}
